<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/id_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.createaccount.CreateAccount"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="100dp"
            >

            <EditText
                android:id="@+id/id_firstNameParent"
                android:hint="@string/str_promptFname"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

            <EditText
                android:id="@+id/id_lastNameParent"
                android:hint="@string/str_promptLname"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="100dp"
            >

            <EditText
                android:id="@+id/id_emailParent"
                android:hint="@string/str_promptEmail"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />

            <EditText
                android:id="@+id/id_phoneNumberParent"
                android:hint="@string/str_promptPhone"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="100dp"
            >

            <Button
                android:id="@+id/id_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_saveChanges"
                android:layout_gravity="end"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/antic"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>