<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/id_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChangePassword"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="100dp"
            >

            <EditText
                android:id="@+id/id_methodInput"
                android:hint="@string/str_promptEmailOrPhone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="100dp"
            >

            <Button
                android:id="@+id/id_backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_cancel"
                android:layout_gravity="end"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/antic"
                android:layout_weight="2"
                android:backgroundTint="@color/grey"
                />

            <Button
                android:id="@+id/id_sendCodeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_send"
                android:layout_gravity="end"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/antic"
                android:layout_weight="2"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>