<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"/>
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical"
>
    <!--Our video viewer for the baby footage -->
    <VideoView
        android:layout_width="match_parent"
        android:layout_height="232dp"
        />

    <!--This layout contains our blood ox and temp data views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="Blood Oxygen:"
            android:textColor="@color/black"
            android:background="@color/purple_200"
            android:layout_marginRight="20dp"
            android:padding="5dp"
        />
        <TextView
            android:id="@+id/id_bloodOxTextBox"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/str_percentSymbol"
            android:background="@color/healthy_green"
            android:padding="5dp"
            />
    </LinearLayout>

    <!--This layout contains our pulse data view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="Pulse:"
            android:textColor="@color/black"
            android:background="@color/purple_200"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/id_pulseTextBox"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/str_bpmSymbol"
            android:background="@color/healthy_green"
            android:padding="5dp"
            />
    </LinearLayout>

    <!--This layout contains our blood ox and temp data views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="Temperature: "
            android:textColor="@color/black"
            android:background="@color/purple_200"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/id_tempTextBox"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/str_tempFSymbol"
            android:background="@color/healthy_green"
            android:padding="5dp"
            />
    </LinearLayout>
</LinearLayout>


